# agressive-moderator-telegram-bot

./: .dockerignore  Dockerfile  bot.py  build.sh  pyproject.toml
k8s/: deployment.yaml
